--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,16 @@
 {
-    "name": "sc0vu/web3.php",
+    "name": "tollfreeswap/web3.php",
     "description": "Ethereum web3 interface.",
     "type": "library",
     "license": "MIT",
     "authors": [
         {
-            "name": "sc0Vu",
-            "email": "alk03073135@gmail.com"
+            "name": "Tollswap",
+            "email": "tollfreeswap@gmail.com"
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "^6.3 | ^7.0",
+        "guzzlehttp/guzzle": "^6.3|^7.0.1",
         "PHP": "^7.1",
         "kornrunner/keccak": "~1.0",
         "phpseclib/phpseclib": "~2.0.11",
